# AI-Job-Application-Assistant

./: README.md  pyproject.toml  requirements.txt
job_assistant/: claude_service.py  cli.py  parser.py  prompts.py
