[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "job-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.41.0",
    "typer[all]==0.13.0",
    "rich==13.9.4",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
]

[project.scripts]
job-assistant = "job_assistant.cli:app"
